# ally

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  justfile
.ally/: config.yaml
.ally/tasks/my-feature/: task.yaml
.ally/tasks/my-feature/threads/main-thread/: thread.yaml
.ally/tasks/my-new-task/: task.yaml
.ally/tasks/my-new-task/threads/tetesting/: thread.yaml
.ally/tasks/sample-task/: task.yaml
.ally/tasks/sample-task/threads/main/: thread.yaml
.ally/tasks/sample-task/threads/main/stages/design/: artifact.md
.ally/tasks/sample-task/threads/main/stages/document/: artifact.md
.ally/tasks/sample-task/threads/main/stages/implementation/: artifact.md
.ally/tasks/sample-task/threads/main/stages/intent/: artifact.md
.ally/tasks/sample-task/threads/main/stages/new_stage/: artifact.md
.ally/tasks/sample-task/threads/new-thread-name/: thread.yaml
.ally/tasks/sample-task/threads/new-thread-name/stages/research/: artifact.md
.ally/tasks/sample-task/threads/testing-opencode/: thread.yaml
.ally/tasks/sample-task/threads/testing-opencode/stages/intent/: artifact.md
.ally/tasks/sample-task/threads/testing-out-research-plan-implement/: thread.yaml
.ally/workflows/4244fe77-7a08-4758-aaea-4a0c9e95601b/: workflow.yaml
.ally/workflows/default-workflow/: workflow.yaml
.ally/workflows/research-plan-implement/: workflow.yaml
.github/workflows/: release.yml
.opencode/agents/: codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  web-search-researcher.md
.opencode/commands/: implement.md  plan.md  research.md
.opencode/skills/implement/: SKILL.md
.opencode/skills/plan/: SKILL.md
.opencode/skills/research/: SKILL.md
benchmark/artifact-autocomplete/: BUILD  main.cpp
benchmark/chat-rendering/: BUILD  main.cpp
benchmark/command-autocomplete/: BUILD  main.cpp
benchmark/skill-autocomplete/: BUILD  main.cpp
benchmark/text-highlighting/: BUILD  highlight_theme.hpp  main.cpp  plain_renderer.cpp  plain_renderer.hpp  prod_bench.cpp  sample_data.hpp  streaming_bench.cpp  treesitter_renderer.cpp  treesitter_renderer.hpp
benchmark/user-input/: BUILD  main.cpp
data/queries/cpp/: highlights.scm
data/queries/javascript/: highlights.scm
data/queries/python/: highlights.scm
data/queries/rust/: highlights.scm
data/themes/: BUILD  tokyonight.yaml
src/app/: AppContext.hpp  BUILD  FocusState.hpp  NavState.hpp  Navigator.hpp  main.cpp
src/auth/: Auth.cpp  Auth.hpp  BUILD
src/commands/navigation/: BUILD  Navigation.cpp  Navigation.hpp
src/commands/storage/: BUILD  Storage.cpp  Storage.hpp
src/commands/task/: BUILD  Task.cpp  Task.hpp
src/components/autocomplete/: ArtifactAutocomplete.cpp  ArtifactAutocomplete.hpp  ArtifactTypes.hpp  BUILD  CommandAutocomplete.cpp  CommandAutocomplete.hpp  CommandTypes.hpp  FileAutocomplete.cpp  FileAutocomplete.hpp  SkillAutocomplete.cpp  SkillAutocomplete.hpp  SkillTypes.hpp  Types.hpp
src/components/bottom_bar/: BUILD  BottomBar.cpp  BottomBar.hpp
src/components/command_bar/: BUILD  CommandBar.cpp  CommandBar.hpp  CommandBarState.hpp  CommandRegistry.cpp  CommandRegistry.hpp
src/components/error_screen/: BUILD  ErrorScreen.cpp  ErrorScreen.hpp
src/components/health_monitor/: BUILD  HealthMonitor.cpp  HealthMonitor.hpp
src/components/nav_bar/: BUILD  NavBar.cpp  NavBar.hpp
src/components/scrollable/: BUILD  ScrollableNode.cpp  ScrollableNode.hpp
src/components/splash/: BUILD  Splash.cpp  Splash.hpp
src/components/vim_mode/: BUILD  CursorOverlayNode.hpp  VimMode.cpp  VimMode.hpp
src/configuration/: BUILD  ConfigError.hpp  Configuration.cpp  Configuration.hpp  HotkeyParser.cpp  HotkeyParser.hpp  InputConfig.cpp  InputConfig.hpp  Paths.cpp  Paths.hpp
src/models/: BUILD  Result.hpp  Task.hpp  Workflow.hpp
src/opencode/: BUILD  Client.cpp  Client.hpp  Error.hpp  Lifecycle.cpp  Lifecycle.hpp  Service.cpp  Service.hpp  Sse.cpp  Sse.hpp  State.hpp  Types.hpp
src/providers/artifact/: ArtifactService.cpp  ArtifactService.hpp  BUILD
src/providers/repo_file/: BUILD  FileTaskProvider.cpp  FileTaskProvider.hpp
src/providers/workflow/: BUILD  WorkflowService.cpp  WorkflowService.hpp
src/rendering/: BUILD  HighlightTheme.cpp  HighlightTheme.hpp  PlainRenderer.cpp  PlainRenderer.hpp  QueryStore.cpp  QueryStore.hpp  TreeSitterRenderer.cpp  TreeSitterRenderer.hpp
src/services/: BUILD  CommandService.cpp  CommandService.hpp  SkillService.cpp  SkillService.hpp
src/services/watcher/: ArtifactWatcher.cpp  ArtifactWatcher.hpp  BUILD  CommandsWatcher.cpp  CommandsWatcher.hpp  SkillsWatcher.cpp  SkillsWatcher.hpp  WatcherBroadcast.hpp  WatcherEvents.hpp  WatcherQueues.hpp
src/storage/: BUILD  Storage.cpp  Storage.hpp
src/style/colour/: BUILD  Colour.cpp  Colour.hpp  StageColours.cpp  StageColours.hpp
src/style/form/: BUILD  FormStyle.cpp  FormStyle.hpp
src/utils/: BUILD  time_format.hpp
src/views/board/: BUILD  Board.cpp  Board.hpp
src/views/create_task/: BUILD  CreateTask.cpp  CreateTask.hpp
src/views/create_thread/: BUILD  CreateThread.cpp  CreateThread.hpp
src/views/quick_chat/: BUILD  QuickChat.cpp  QuickChat.hpp  QuickChatTypes.hpp
src/views/stage_view/: BUILD  StageView.cpp  StageView.hpp  StageViewTypes.hpp
src/views/task_detail/: BUILD  TaskDetail.cpp  TaskDetail.hpp
src/views/workflow_form/: BUILD  WorkflowForm.cpp  WorkflowForm.hpp
src/views/workflow_list/: BUILD  WorkflowList.cpp  WorkflowList.hpp
test/: BUILD
test/chat/: BUILD
test/chat/data/: BUILD  session.json
tools/: nvim_theme_to_yaml.py
